# caspian-sdk

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PR-solve.md  README.md  README.zh-CN.md  SECURITY.md  add_ts_docs.py  context.md  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/cli/: README.md  pyproject.toml
apps/cli/src/caspian_cli/: main.py
apps/cli/src/comm_cli/: main.py
apps/cli/tests/: test_main.py
contributions/: add_typescript_checks_to_the_p.md
examples/: README.md  autoreply.py  autoreply.ts  email_triage.py  one_handler_three_channels.py  reminder.py  serverless.py  serverless.ts  serverless_webhook.py  serverless_webhook.ts  slack_slow_agent.py  slack_support_bot.py  telegram_reminders.py
sdks/python/: README.md  pyproject.toml
sdks/python/src/caspian_sdk/: __init__.py  blocks.py  client.py  state.py  stream.py
sdks/python/tests/: test_overlap.py  test_sdk.py  test_state.py  test_streaming.py  test_webhook_handler.py
sdks/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: client.ts  config.ts  errors.ts  index.ts  state.ts  types.ts
sdks/typescript/test/: client.test.ts  config.test.ts  state.test.ts  streaming.test.ts  webhook.test.ts
