[project]
name = "comm-cli"
version = "0.2.1"
description = "CLI for the communication gateway: init, connect, listen, test"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28,<1",
]

[project.scripts]
caspian = "comm_cli.main:main"
comm = "comm_cli.main:main"  # legacy alias; use `caspian`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
