[project]
name = "caspian-cli"
version = "0.2.2"
description = "Caspian CLI: init a project, connect channels, login, billing, and tail events from your terminal."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Caspian", email = "ayushguptadev1@gmail.com" }]
keywords = ["ai", "agents", "communication", "cli", "caspian"]
dependencies = [
  "httpx>=0.28,<1",
]

[project.urls]
Homepage = "https://trycaspianai.com"
Documentation = "https://api.trycaspianai.com/SKILL.md"

[project.scripts]
caspian = "caspian_cli.main:main"
comm = "caspian_cli.main:main"  # legacy alias; use `caspian`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caspian_cli"]
